feat: implement full business logic across all services
Phase 2 - Core Crawling Engine:
- Azure Table/Blob/Queue clients for job lifecycle, BFS coordination
- URL fetcher: HTTP fetch, SHA-256 content dedup, blob storage
- Content parser: Jsoup link extraction, result queue publishing
- Orchestrator: BFS scheduler, URL dedup, 10k cap enforcement

Phase 3 - API Gateway:
- Azure AD JWT validation with local profile bypass
- Full CRUD for jobs, schedules, and results
- Single-active-job enforcement, stop/delete flows
- Paginated results with filtering, content retrieval
- Global error handling with proper HTTP status codes

Phase 4 - Frontend:
- MSAL auth hook with token interceptor
- Job dashboard with live status polling
- Seed URL drag-and-drop upload
- Schedule management with interval/cron config
- Crawl results browser with HTML content viewer
- Protected routing, loading states, toast notifications

Phase 5 - Scheduling:
- Quartz-based schedule executor
- Schedule reload on startup from Azure Table
- Conflict resolution (skip if job running)
- Internal REST endpoints for schedule management

Phase 6 - Infrastructure:
- Added result-queue, resource limits, health probes
- KEDA ScaledObjects with correct queue refs
- Azure AD identity module
- Proper module output wiring

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>